--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -16,7 +16,7 @@
 
 .ContainerItemCartItem {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 
 .ItemHeaderCartItem {
