--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     border-radius: 1em;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    min-width: 500px;
+    min-width: 350px;
     overflow: hidden;
     height: max-content;
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
@@ -38,15 +38,15 @@
     padding: 0 2em;
 }
 
-.card-body h5{
-    font-size: 2.1em;
+.card-body h4{
+    font-size: 1.5em;
     text-align: left;
     margin: 0;
 }
 
-.card-body h4{
+.card-body h5{
     margin: 0;
-    font-size: 1.5em;
+    font-size: 1.2em;
     text-align: left;
     color: rgb(18, 158, 111);
 }
@@ -58,6 +58,7 @@
     -webkit-box-orient: vertical; /* Define la orientación vertical del texto */
     overflow: hidden; /* Esconde el texto que se sale del límite */
     text-overflow: ellipsis; /* Agrega los tres puntos suspensivos */
+    margin-bottom: 2em;
 }
 
 .item-category{
@@ -77,4 +78,25 @@
     color: #fff;
     border-radius: 0.5em;
     padding: 0.5em 1.2em;
+    text-decoration: none;
+    padding: 0.5em 3em;
+    transition: all .2s ease-in-out;
 }
+
+.item-button:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    background-color: #154ead;
+}
+
+
+
+.finalizarbtn:hover{
+    background-color: #2e86c1;
+    color: #fff;
+    border-radius: 0.5em;
+    padding: 0.5em 1.2em;
+    text-decoration: none;
+    padding: 0.5em 3em;
+    transition: all .2s ease-in-out;
+}
+
