--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -6,3 +6,16 @@
     min-height: 80vh;
     padding: 10px;
 }
+
+.load-icon svg{
+    width: 150px;
+  }
+  
+  .load-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-top: 3em;
+  }
